# libreleak

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.aggregator  README.md  VALIDATION_RESEARCH.md  VERIFICATION_README.md  VERIFICATION_STATUS.md  action.yml  bug-bounty-campaign.sh  docker-compose.yml  repos.txt.example  scan_all.sh  scan_codeberg.sh  scan_github.sh  test_report_compilation.sh  test_verification.sh
.github/: secret_scanning.yml
.github/workflows/: ci.yml  release.yml
scripts/: batch-scan.sh  compile-reports.py  discover-repos.sh  fetch-feeds.sh  import-reports.py  init-db.sh  init-db.sql  llk  monitor.sh  report-bounties.py  scan-queue.sh  scan-repo.sh
src/: cli.rs  git.rs  main.rs  output.rs  rules.rs  scanner.rs  verify.rs
tests/: cli_tests.rs  common.rs  detector_tests.rs  git_history_tests.rs  verification_tests.rs
